sumo/tests/traci/VariableRetrieval/Route/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 166 255 dummy
simstep 6 1
